--- a/src/ForkFinder/ForkFinder.csproj
+++ b/src/ForkFinder/ForkFinder.csproj
@@ -18,9 +18,14 @@
 
   <ItemGroup>
     <Content Remove="Views\Clientes\Reservas.cshtml" />
+    <Content Remove="Views\Reservas\Reservas.cshtml" />
+    <Content Remove="Views\Restaurantes\Index1.cshtml" />
   </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.17" />
+	</ItemGroup>
 
-  <ItemGroup>
+	<ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
